test: updates UI fixtures API
